--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ nav {
     background-color: #282A35;
     letter-spacing: 1px;
     top: 57px;
-    width: 99%;
+    width: 100%;
     white-space: nowrap;
     font-family: 'Source Sans Pro Topnav', sans-serif;
     z-index: 2;
@@ -62,6 +62,10 @@ main span {
     padding: 40px;
     font-size: 16px;
     height: 200vh;
+}
+
+.box p {
+    padding: 20px 0;
 }
 
 .sticky {
